SIVA-323 Clean up POM-s and update dependencies

--- a/siva-parent/siva-distribution/pom.xml
+++ b/siva-parent/siva-distribution/pom.xml
@@ -31,6 +31,12 @@
             <groupId>ee.openid.siva</groupId>
             <artifactId>siva-webapp</artifactId>
             <version>${project.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>ee.openid.siva</groupId>
