--- a/siva-parent/siva-test/pom.xml
+++ b/siva-parent/siva-test/pom.xml
@@ -27,8 +27,8 @@
     <name>SiVa Web Service integration tests</name>
 
     <properties>
-        <restassured.version>4.2.1</restassured.version>
-        <allure.version>2.13.10</allure.version>
+        <restassured.version>4.4.0</restassured.version>
+        <allure.version>2.17.2</allure.version>
         <aspectj.version>1.9.5</aspectj.version>
         <maven.surefire.plugin.version>2.22.1</maven.surefire.plugin.version>
     </properties>
@@ -39,14 +39,22 @@
             <artifactId>siva-webapp</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -56,6 +64,10 @@
                 <exclusion>
                     <groupId>com.vaadin.external.google</groupId>
                     <artifactId>android-json</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>*</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -67,7 +79,8 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>2.4.21</version>
+            <version>3.0.9</version>
+            <type>pom</type>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -191,7 +204,7 @@
                     </plugin>
                     <plugin>
                         <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>3.0.0-M4</version>
+                        <version>3.0.0-M5</version>
                         <configuration>
                             <forkCount>1</forkCount>
                             <reuseForks>true</reuseForks>
