--- a/pom.xml
+++ b/pom.xml
@@ -111,12 +111,12 @@
         <dss.version>5.7.d4j.2</dss.version>
         <commons.codec.version>1.15</commons.codec.version>
         <commons.collections.version>4.4</commons.collections.version>
-        <commons.io.version>2.9.0</commons.io.version>
-        <jackson.version>2.12.3</jackson.version>
-        <json.version>20210307</json.version>
-        <logback.version>1.2.3</logback.version>
-        <lombok.version>1.18.20</lombok.version>
-        <snakeyaml.version>1.29</snakeyaml.version>
+        <commons.io.version>2.11.0</commons.io.version>
+        <jackson.version>2.13.1</jackson.version>
+        <json.version>20211205</json.version>
+        <logback.version>1.2.10</logback.version>
+        <lombok.version>1.18.22</lombok.version>
+        <snakeyaml.version>1.30</snakeyaml.version>
         <spring.boot.version>2.6.2</spring.boot.version>
         <xmlsec.version>2.1.6</xmlsec.version>
 
@@ -146,7 +146,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>3.14.0</version>
+                <version>3.15.0</version>
             </plugin>
         </plugins>
     </reporting>
@@ -156,7 +156,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.9.0</version>
                 <configuration>
                     <forceJavacCompilerUse>true</forceJavacCompilerUse>
                     <source>${language.level}</source>
@@ -200,7 +200,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.3</version>
+                <version>3.0.0-M5</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
