--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -40,8 +40,7 @@
     </modules>
 
     <properties>
-        <cxf.version>3.4.4</cxf.version>
-        <jade4j.version>1.3.1</jade4j.version>
+        <cxf.version>3.5.0</cxf.version>
     </properties>
 
     <dependencyManagement>
@@ -88,12 +87,6 @@
                 <scope>import</scope>
             </dependency>
 
-            <dependency>
-                <groupId>eu.michael-simons</groupId>
-                <artifactId>wro4j-spring-boot-starter</artifactId>
-                <version>0.10.1</version>
-            </dependency>
-
             <!-- Apache CXF -->
             <dependency>
                 <groupId>org.apache.cxf</groupId>
@@ -110,108 +103,96 @@
                 <groupId>ee.openid.siva</groupId>
                 <artifactId>validation-commons</artifactId>
                 <version>${project.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.logging.log4j</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>ee.openid.siva</groupId>
                 <artifactId>generic-validation-service</artifactId>
                 <version>${project.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.logging.log4j</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>ee.openid.siva</groupId>
                 <artifactId>timestamptoken-validation-service</artifactId>
                 <version>${project.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.logging.log4j</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>ee.openid.siva</groupId>
                 <artifactId>timemark-container-validation-service</artifactId>
                 <version>${project.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.logging.log4j</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <dependency>
                 <groupId>ee.openid.siva</groupId>
                 <artifactId>xroad-validation-service</artifactId>
                 <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>ee.openid.siva</groupId>
-                <artifactId>tsl-loader</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>ee.openid.siva</groupId>
-                <artifactId>siva-statistics</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>ee.openid.siva</groupId>
-                <artifactId>siva-monitoring</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-
-            <!-- Front-end development -->
-            <dependency>
-                <groupId>com.domingosuarez.boot</groupId>
-                <artifactId>jade4j-spring-boot-starter</artifactId>
-                <version>2.0.4.RELEASE</version>
                 <exclusions>
                     <exclusion>
-                        <groupId>de.neuland-bfi</groupId>
+                        <groupId>org.apache.logging.log4j</groupId>
                         <artifactId>*</artifactId>
                     </exclusion>
                 </exclusions>
             </dependency>
             <dependency>
-                <groupId>de.neuland-bfi</groupId>
-                <artifactId>spring-jade4j</artifactId>
-                <version>${jade4j.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>de.neuland-bfi</groupId>
-                <artifactId>jade4j</artifactId>
-                <version>${jade4j.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.yaml</groupId>
-                <artifactId>snakeyaml</artifactId>
-                <version>${snakeyaml.version}</version>
-            </dependency>
-
-            <!-- Webjars -->
-            <dependency>
-                <groupId>org.webjars.bower</groupId>
-                <artifactId>bootstrap</artifactId>
-                <version>4.5.1</version>
+                <groupId>ee.openid.siva</groupId>
+                <artifactId>tsl-loader</artifactId>
+                <version>${project.version}</version>
                 <exclusions>
                     <exclusion>
-                        <groupId>org.webjars.bower</groupId>
-                        <artifactId>jquery</artifactId>
+                        <groupId>org.apache.logging.log4j</groupId>
+                        <artifactId>*</artifactId>
                     </exclusion>
                 </exclusions>
             </dependency>
             <dependency>
-                <groupId>org.webjars</groupId>
-                <artifactId>dropzone</artifactId>
-                <version>4.2.0</version>
+                <groupId>ee.openid.siva</groupId>
+                <artifactId>siva-statistics</artifactId>
+                <version>${project.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.logging.log4j</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
-                <groupId>org.webjars.bower</groupId>
-                <artifactId>highlightjs</artifactId>
-                <version>9.4.0</version>
+                <groupId>ee.openid.siva</groupId>
+                <artifactId>siva-monitoring</artifactId>
+                <version>${project.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.logging.log4j</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
+
             <dependency>
-                <groupId>org.webjars.bower</groupId>
-                <artifactId>jquery</artifactId>
-                <version>3.5.1</version>
-            </dependency>
-            <dependency>
-                <groupId>org.webjars.bower</groupId>
-                <artifactId>bootstrap-fileinput</artifactId>
-                <version>4.3.1</version>
-            </dependency>
-            <dependency>
-                <groupId>org.webjars.bower</groupId>
-                <artifactId>js-cookie</artifactId>
-                <version>2.1.2</version>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>${snakeyaml.version}</version>
             </dependency>
 
             <!-- Public Dependencies -->
@@ -221,24 +202,11 @@
                 <version>${commons.io.version}</version>
             </dependency>
 
-            <!-- Caching in memory file store -->
-            <dependency>
-                <groupId>com.github.ben-manes.caffeine</groupId>
-                <artifactId>caffeine</artifactId>
-                <version>2.6.2</version>
-            </dependency>
-
             <!-- Apache commons -->
             <dependency>
                 <groupId>commons-codec</groupId>
                 <artifactId>commons-codec</artifactId>
                 <version>${commons.codec.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.zeroturnaround</groupId>
-                <artifactId>zt-zip</artifactId>
-                <version>1.14</version>
-                <type>jar</type>
             </dependency>
 
             <!-- Lombok for getters and setters -->
@@ -269,13 +237,6 @@
                 <version>${json.version}</version>
             </dependency>
 
-            <!-- DB for webapp settings -->
-            <dependency>
-                <groupId>org.hsqldb</groupId>
-                <artifactId>hsqldb</artifactId>
-                <version>2.4.1</version>
-            </dependency>
-
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
@@ -288,75 +249,5 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <repositories>
-        <repository>
-            <id>central</id>
-            <url>https://repo1.maven.org/maven2/</url>
-        </repository>
-        <repository>
-            <id>jboss-public</id>
-            <url>https://repository.jboss.org/nexus/</url>
-        </repository>
-        <repository>
-            <id>netbeans</id>
-            <url>http://bits.netbeans.org/maven2/</url>
-        </repository>
-        <repository>
-            <id>java.net</id>
-            <url>http://download.java.net/maven/2/</url>
-        </repository>
-        <repository>
-            <id>spring-snapshots</id>
-            <url>http://repo.spring.io/snapshot</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>spring-milestones</id>
-            <url>http://repo.spring.io/milestone</url>
-        </repository>
-        <repository>
-            <id>jCenter</id>
-            <url>https://jcenter.bintray.com/</url>
-        </repository>
-        <repository>
-            <id>apache.snapshots</id>
-            <url>https://repository.apache.org/content/repositories/snapshots</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>central</id>
-            <url>https://repo1.maven.org/maven2/</url>
-        </pluginRepository>
-        <pluginRepository>
-            <id>spring-snapshots</id>
-            <url>http://repo.spring.io/snapshot</url>
-        </pluginRepository>
-        <pluginRepository>
-            <id>spring-milestones</id>
-            <url>http://repo.spring.io/milestone</url>
-        </pluginRepository>
-        <pluginRepository>
-            <id>apache.snapshots</id>
-            <name>Apache Snapshots</name>
-            <url>https://repository.apache.org/content/repositories/snapshots</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
 
 </project>
