--- a/pom.xml
+++ b/pom.xml
@@ -224,7 +224,7 @@
         <profile>
             <id>dependency-check</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
             </activation>
             <build>
                 <plugins>
