--- a/siva-parent/siva-webapp/src/main/resources/ValidationMessages.properties
+++ b/siva-parent/siva-webapp/src/main/resources/ValidationMessages.properties
@@ -1,7 +1,7 @@
 #JSR-303 bean validation uses this for default messages
 
 validation.error.message.base64 = Document is not encoded in a valid base64 string
-validation.error.message.documentType = Invalid document type
+validation.error.message.documentType = documentType is not a valid request parameter
 validation.error.message.reportType = Invalid report type
 validation.error.message.filename = Invalid filename
 validation.error.message.dataFile.filename = Invalid filename. Can only return data files for DDOC type containers.
