--- a/siva-parent/siva-sample-application/pom.xml
+++ b/siva-parent/siva-sample-application/pom.xml
@@ -28,7 +28,7 @@
     <packaging>${packaging.type}</packaging>
 
     <properties>
-        <jade4j.version>1.3.1</jade4j.version>
+        <pug4j.version>2.0.6</pug4j.version>
     </properties>
 
     <dependencies>
@@ -64,25 +64,14 @@
 
         <!-- Spring Boot Jade -->
         <dependency>
-            <groupId>com.domingosuarez.boot</groupId>
-            <artifactId>jade4j-spring-boot-starter</artifactId>
-            <version>2.0.4.RELEASE</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>de.neuland-bfi</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
+            <groupId>de.neuland-bfi</groupId>
+            <artifactId>pug4j</artifactId>
+            <version>${pug4j.version}</version>
         </dependency>
         <dependency>
             <groupId>de.neuland-bfi</groupId>
-            <artifactId>spring-jade4j</artifactId>
-            <version>${jade4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>de.neuland-bfi</groupId>
-            <artifactId>jade4j</artifactId>
-            <version>${jade4j.version}</version>
+            <artifactId>spring-pug4j</artifactId>
+            <version>${pug4j.version}</version>
         </dependency>
 
         <dependency>
@@ -305,16 +294,5 @@
             </build>
         </profile>
     </profiles>
-
-    <repositories>
-        <repository>
-            <id>central</id>
-            <url>https://repo1.maven.org/maven2/</url>
-        </repository>
-        <repository>
-            <id>jCenter</id>
-            <url>https://jcenter.bintray.com/</url>
-        </repository>
-    </repositories>
 
 </project>
