--- a/validation-services-parent/pom.xml
+++ b/validation-services-parent/pom.xml
@@ -34,7 +34,7 @@
     </modules>
 
     <properties>
-        <digidoc4j.version>5.0.0</digidoc4j.version>
+        <digidoc4j.version>5.1.0-SNAPSHOT</digidoc4j.version>
     </properties>
 
     <dependencyManagement>
