--- a/validation-services-parent/timemark-container-validation-service/pom.xml
+++ b/validation-services-parent/timemark-container-validation-service/pom.xml
@@ -88,6 +88,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>4.2.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
