SIVA-257, fix assertThrows test preparations, update dependencies, remove AssertionErrors imports

--- a/siva-parent/siva-signature-service/pom.xml
+++ b/siva-parent/siva-signature-service/pom.xml
@@ -41,6 +41,17 @@
             <groupId>ee.openid.siva</groupId>
             <artifactId>validation-commons</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.vaadin.external.google</groupId>
+                    <artifactId>android-json</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
         <!-- DSS dependencies -->
         <dependency>
@@ -65,12 +76,6 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-inline</artifactId>
-            <version>4.2.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
