--- a/siva-parent/siva-test/pom.xml
+++ b/siva-parent/siva-test/pom.xml
@@ -164,7 +164,7 @@
                                     <value>${project.build.directory}/allure-results</value>
                                 </property>
                             </systemProperties>
-                            <groups>ee.openeid.siva.integrationtest.configuration.IntegrationTest</groups>
+                            <groups>IntegrationTest</groups>
                         </configuration>
                         <dependencies>
                             <dependency>
