--- a/siva-parent/siva-test/pom.xml
+++ b/siva-parent/siva-test/pom.xml
@@ -202,7 +202,7 @@
                             <includes>
                                 <include>**/*.java</include>
                             </includes>
-                            <groups>ee.openeid.siva.integrationtest.configuration.IntegrationTest</groups>
+                            <groups>IntegrationTest</groups>
                         </configuration>
                         <executions>
                             <execution>
