--- a/validation-services-parent/generic-validation-service/src/main/resources/application.yaml
+++ b/validation-services-parent/generic-validation-service/src/main/resources/application.yaml
@@ -4,14 +4,41 @@ siva:
       policies:
         -
           name: POLv3
-          description: Policy for validating Electronic Signatures and Electronic Seals regardless of the legal type of the signature or seal (according to Regulation (EU) No 910/2014, aka eIDAS), i.e. the fact that the electronic signature or electronic seal is either Advanced electronic Signature (AdES), AdES supported by a Qualified Certificate (AdES/QC) or a Qualified electronic Signature (QES) does not change the total validation result of the signature. Signatures which are not compliant with ETSI standards (referred by Regulation (EU) No 910/2014) may produce unknown or invalid validation result. Validation process is based on eIDAS Article 32, Commission Implementing Decision (EU) 2015/1506 and referred ETSI standards.
+          description: >-
+            Policy for validating Electronic Signatures and Electronic Seals regardless of the legal type of the signature or seal
+            (according to Regulation (EU) No 910/2014, aka eIDAS), i.e. the fact that the electronic signature or electronic seal is
+            either Advanced electronic Signature (AdES), AdES supported by a Qualified Certificate (AdES/QC) or a Qualified electronic
+            Signature (QES) does not change the total validation result of the signature. Signatures which are not compliant with ETSI
+            standards (referred by Regulation (EU) No 910/2014) may produce unknown or invalid validation result. Validation process is
+            based on eIDAS Article 32, Commission Implementing Decision (EU) 2015/1506 and referred ETSI standards.
           url: http://open-eid.github.io/SiVa/siva3/appendix/validation_policy/#POLv3
           constraintPath: generic_constraint_ades.xml
           allowCrlRevocationSource: false
         -
           name: POLv4
-          description: Policy according most common requirements of Estonian Public Administration, to validate Qualified Electronic Signatures and Electronic Seals with Qualified Certificates (according to Regulation (EU) No 910/2014, aka eIDAS). I.e. signatures that have been recognized as Advanced electronic Signatures (AdES) and AdES supported by a Qualified Certificate (AdES/QC) do not produce a positive validation result, with exception for seals, where AdES/QC and above will produce positive result. Signatures and Seals which are not compliant with ETSI standards (referred by eIDAS) may produce unknown or invalid validation result. Validation process is based on eIDAS Article 32 and referred ETSI standards.
+          description: >-
+            Policy according most common requirements of Estonian Public Administration, to validate Qualified Electronic Signatures
+            and Electronic Seals with Qualified Certificates (according to Regulation (EU) No 910/2014, aka eIDAS). I.e. signatures
+            that have been recognized as Advanced electronic Signatures (AdES) and AdES supported by a Qualified Certificate (AdES/QC)
+            do not produce a positive validation result, with exception for seals, where AdES/QC and above will produce positive result.
+            Signatures and Seals which are not compliant with ETSI standards (referred by eIDAS) may produce unknown or invalid
+            validation result. Validation process is based on eIDAS Article 32 and referred ETSI standards.
           url: http://open-eid.github.io/SiVa/siva3/appendix/validation_policy/#POLv4
           constraintPath: generic_constraint_qes.xml
+          allowCrlRevocationSource: false
+        -
+          name: POLv5
+          description: >-
+            Policy for validating Electronic Signatures and Electronic Seals regardless of the legal type of the signature or seal
+            (according to Regulation (EU) No 910/2014, aka eIDAS), i.e. the fact that the electronic signature or electronic seal is
+            either Advanced electronic Signature (AdES), AdES supported by a Qualified Certificate (AdES/QC) or a Qualified electronic
+            Signature (QES) does not change the total validation result of the signature. All certificates and their related chains
+            supporting the signatures are validated against the EU Member State Trusted Lists and third country Trusted Lists with
+            voluntary-based AdES recognition (this includes signer's certificate and certificates used to validate certificate
+            validity status services - CRLs, OCSP, and time-stamps). Signatures which are not compliant with ETSI standards
+            (referred by Regulation (EU) No 910/2014) may produce unknown or invalid validation result. Validation process is based on
+            eIDAS Article 32, Commission Implementing Decision (EU) 2015/1506 and referred ETSI standards.
+          url: https://open-eid.github.io/SiVa/siva3/appendix/validation_policy/
+          constraintPath: ua_constraint_ades.xml
           allowCrlRevocationSource: false
       defaultPolicy: POLv4
