--- a/validation-services-parent/generic-validation-service/pom.xml
+++ b/validation-services-parent/generic-validation-service/pom.xml
@@ -117,6 +117,13 @@
             <artifactId>dss-asic-xades</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>ee.openid.siva</groupId>
+            <artifactId>validation-commons</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+            <type>test-jar</type>
+        </dependency>
     </dependencies>
 
 </project>
