--- a/siva-parent/siva-statistics/pom.xml
+++ b/siva-parent/siva-statistics/pom.xml
@@ -63,6 +63,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-inline</artifactId>
+            <version>5.2.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
