SIVA-652 Update Bouncy Castle dependency

--- a/validation-services-parent/pom.xml
+++ b/validation-services-parent/pom.xml
@@ -57,6 +57,11 @@
                 <artifactId>bcprov-jdk18on</artifactId>
                 <version>${bouncycastle.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcutil-jdk18on</artifactId>
+                <version>${bouncycastle.version}</version>
+            </dependency>
             <!-- DigiDoc4J -->
             <dependency>
                 <groupId>org.digidoc4j</groupId>
