--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,9 @@ services:
       - "8080:8080"
     environment:
       - logging.config=/etc/siva-webapp/logback.xml
+      # Logs directory
+      - BUILD_FOLDER=/tmp/logs
+      - DSS_DATA_FOLDER=/tmp/dss-data
     networks:
       default:
         aliases:
