--- a/pom.xml
+++ b/pom.xml
@@ -114,16 +114,12 @@
 
         <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>
 
-        <bouncycastle.version>1.78.1</bouncycastle.version>
-        <dss.version>6.0.d4j.1</dss.version>
-        <commons.codec.version>1.16.1</commons.codec.version>
+        <bouncycastle.version>1.79</bouncycastle.version>
+        <dss.version>6.0.d4j.2</dss.version>
         <commons.collections.version>4.4</commons.collections.version>
-        <commons.io.version>2.16.1</commons.io.version>
+        <commons.io.version>2.18.0</commons.io.version>
         <json.version>20240303</json.version>
-        <logback.version>1.5.6</logback.version>
-        <lombok.version>1.18.32</lombok.version>
-        <snakeyaml.version>2.2</snakeyaml.version>
-        <spring.boot.version>3.2.5</spring.boot.version>
+        <spring.boot.version>3.4.0</spring.boot.version>
 
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
@@ -146,7 +142,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>3.22.0</version>
+                <version>3.26.0</version>
             </plugin>
         </plugins>
     </reporting>
@@ -156,7 +152,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>license-maven-plugin</artifactId>
-                <version>2.4.0</version>
+                <version>2.5.0</version>
                 <configuration>
                     <includeTransitiveDependencies>false</includeTransitiveDependencies>
                 </configuration>
@@ -166,7 +162,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                    <forceLegacyJavacApi>true</forceLegacyJavacApi>
                     <source>${language.level}</source>
                     <target>${language.level}</target>
                 </configuration>
@@ -206,12 +202,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>3.0.1</version>
+                <version>3.1.1</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.5</version>
+                <version>3.5.2</version>
                 <configuration>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <argLine>${argLine} -Dfile.encoding=UTF-8 -Xmx1024m</argLine>
@@ -220,6 +216,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
+                <version>3.5.0</version>
                 <executions>
                     <execution>
                         <goals>
