SIVA-847 Don't include Spring Cloud bindings in Docker image

--- a/siva-parent/siva-webapp/pom.xml
+++ b/siva-parent/siva-webapp/pom.xml
@@ -118,6 +118,9 @@
                     <executable>true</executable>
                     <image>
                         <name>${project.artifactId}:latest</name>
+                        <env>
+                            <BP_SPRING_CLOUD_BINDINGS_DISABLED>true</BP_SPRING_CLOUD_BINDINGS_DISABLED>
+                        </env>
                     </image>
                 </configuration>
                 <executions>
