--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: "3.7"
-
 services:
 
   siva-demo-application:
@@ -14,7 +12,7 @@ services:
       - siva-webapp
 
   siva-webapp:
-    image: siva-webapp:latest
+    image: ${SIVA_DOCKER_REGISTRY}${SIVA_PROJECT}siva-webapp:latest
     ports:
       - "8080:8080"
     environment:
